[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/themes/Theme_01.tres" type="Theme" id=1]
[ext_resource path="res://src/themes/Theme_01_small.tres" type="Theme" id=2]
[ext_resource path="res://src/screens/OptionsPopup.gd" type="Script" id=3]
[ext_resource path="res://src/entities/ui/CancelButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/entities/ui/SubmitOptionsButton.tscn" type="PackedScene" id=5]

[node name="OptionsPopup" type="PopupDialog"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.5
margin_top = -159.0
margin_right = 249.5
margin_bottom = 159.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 3 )

[node name="PopupBackground" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.5
margin_top = -127.5
margin_right = 180.5
margin_bottom = 127.5
color = Color( 0.172549, 0.545098, 0.509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox_Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.5
margin_top = -159.0
margin_right = 244.5
margin_bottom = 159.0
size_flags_stretch_ratio = 0.0
theme = ExtResource( 1 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="VBox_Options"]
margin_top = 36.0
margin_right = 488.0
margin_bottom = 81.0
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBox_Options"]
margin_left = 107.0
margin_top = 85.0
margin_right = 380.0
margin_bottom = 281.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
columns = 2

[node name="BckgrndColLabel" type="Label" parent="VBox_Options/GridContainer"]
margin_top = 3.0
margin_right = 191.0
margin_bottom = 24.0
text = "Background Colour:"
align = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBox_Options/GridContainer"]
margin_left = 195.0
margin_right = 273.0
margin_bottom = 27.0
color = Color( 0.172549, 0.545098, 0.509804, 1 )

[node name="SfxOn_Label" type="Label" parent="VBox_Options/GridContainer"]
margin_top = 40.0
margin_right = 191.0
margin_bottom = 61.0
text = "Sound FX On:"
align = 1

[node name="SfxOnChckbx" type="CheckButton" parent="VBox_Options/GridContainer"]
margin_left = 195.0
margin_top = 31.0
margin_right = 273.0
margin_bottom = 71.0
pressed = true

[node name="SfxVol_Label" type="Label" parent="VBox_Options/GridContainer"]
margin_top = 75.0
margin_right = 191.0
margin_bottom = 96.0
text = "Sound Volume:"
align = 1

[node name="SfxVol_Slider" type="HSlider" parent="VBox_Options/GridContainer"]
margin_left = 195.0
margin_top = 75.0
margin_right = 273.0
margin_bottom = 91.0
min_value = -80.0
max_value = 0.0
step = 5.0
tick_count = 10

[node name="MusicOn_Label" type="Label" parent="VBox_Options/GridContainer"]
margin_top = 109.0
margin_right = 191.0
margin_bottom = 130.0
text = "Music On:"
align = 1

[node name="MusicOnChckbx" type="CheckButton" parent="VBox_Options/GridContainer"]
margin_left = 195.0
margin_top = 100.0
margin_right = 273.0
margin_bottom = 140.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVol_Label" type="Label" parent="VBox_Options/GridContainer"]
margin_top = 144.0
margin_right = 191.0
margin_bottom = 165.0
text = "Music Volume:"
align = 1

[node name="MusicVol_Slider" type="HSlider" parent="VBox_Options/GridContainer"]
margin_left = 195.0
margin_top = 144.0
margin_right = 273.0
margin_bottom = 160.0
min_value = -80.0
max_value = 0.0
step = 5.0
tick_count = 10

[node name="SubmitOptionsButton" parent="VBox_Options/GridContainer" instance=ExtResource( 5 )]

[node name="CancelButton" parent="VBox_Options/GridContainer" instance=ExtResource( 4 )]
[connection signal="color_changed" from="VBox_Options/GridContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="VBox_Options/GridContainer/SfxOnChckbx" to="." method="_on_SfxOnChckbx_toggled"]
[connection signal="value_changed" from="VBox_Options/GridContainer/SfxVol_Slider" to="." method="_on_SfxVol_Slider_value_changed"]
[connection signal="toggled" from="VBox_Options/GridContainer/MusicOnChckbx" to="." method="_on_MusicOnChckbx_toggled"]
[connection signal="value_changed" from="VBox_Options/GridContainer/MusicVol_Slider" to="." method="_on_MusicVol_Slider_value_changed"]
[connection signal="button_up" from="VBox_Options/GridContainer/SubmitOptionsButton" to="." method="_on_SubmitOptionsButton_button_up"]
[connection signal="button_up" from="VBox_Options/GridContainer/CancelButton" to="." method="_on_CancelButton_button_up"]
